[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-openenv"
version = "1.0.0"
description = "OpenEnv-compatible reinforcement learning environment for customer support simulation"
authors = [
    {name = "hackathon-team"}
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "google-genai>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
